Correct rule: Groovy << and += survive on collection properties
The "What has no operator" guidance claimed Groovy DSL has none of the
operator support that Kotlin gets from org.gradle.kotlin.dsl, and that
all of `+=`, `-=`, `<<` must therefore be rewritten. That is wrong: the
collection-property operators in Groovy come from Gradle defining
leftShift/plus/addAll on ListProperty/SetProperty themselves, not from
the Kotlin-only extensions.

Rule now states: in Groovy DSL, `prop << x` and `prop += x` (element or
list) survive on ListProperty/SetProperty and must be left unchanged;
only `-=` has no operator and must be rewritten. Adds a matching
anti-pattern using the elasticsearch compilerArgs case, where 6+
`options.compilerArgs << '...'` sites were rewritten to `.add('...')`
for no functional reason.

Evidence (tested against both preview distros in distro-pairs.json:
g94 provider-api-20260204 and g951
gradle10ProviderApiMigrationRenamed-20260609), identical results on both:

  options.compilerArgs is now a ListProperty<String> (DefaultListProperty),
  instanceof ListProperty == true, instanceof List == false.

  RESULT << single : SUCCESS -> [-a, -b, -c]
  RESULT += single : SUCCESS -> [-a, -b, -c, -d]
  RESULT += list   : SUCCESS -> [-a, -b, -c, -d, -e, -f]
  RESULT -= single : FAILED  -> MissingMethodException: ...minus()

  Same SUCCESS for << and += on standalone objects.listProperty and
  objects.setProperty. No deprecation warning under --warning-mode all.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>